--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-picker/picker": "^2.7.6",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/stack": "^6.3.29",
     "@types/react": "~18.2.79",
+    "axios": "^0.24.0",
     "expo": "~51.0.2",
     "expo-image-picker": "~15.0.4",
     "expo-secure-store": "^13.0.1",
@@ -21,7 +23,8 @@
     "firebase": "^10.11.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "expo-speech": "~12.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
