--- a/package.json
+++ b/package.json
@@ -17,20 +17,21 @@
     "@types/react": "~18.2.79",
     "axios": "^0.24.0",
     "expo": "~51.0.8",
+    "expo-av": "~14.0.5",
+    "expo-camera": "~15.0.9",
+    "expo-file-system": "~17.0.1",
     "expo-image-picker": "~15.0.5",
     "expo-secure-store": "^13.0.1",
     "expo-speech": "~12.0.2",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.11.1",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-swipeable-item": "^2.0.9",
-    "typescript": "~5.3.3",
-    "expo-camera": "~15.0.9",
-    "expo-file-system": "~17.0.1",
-    "expo-av": "~14.0.5"
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
